# Optimization

./: .gitignore  CMakeLists.txt
cmake/: FindUmfpack.cmake
examples/: CMakeLists.txt  Euclidean_optimization_example.cpp  Riemannian_optimization_example.cpp  proximal_gradient_example.cpp
include/Optimization/Convex/: ADMM.h  ProximalGradient.h
include/Optimization/LinearAlgebra/: IterativeSolvers.h
include/Optimization/Riemannian/: GradientDescent.h  TNLS.h  TNT.h
tests/: CMakeLists.txt  IterativeSolvers_unit_test.cpp  TNLS_unit_test.cpp  TNT_unit_test.cpp
